<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/colorPrimary"
    tools:context="com.example.pccuong.orderfood.MainDangKy">
    <TextView
        android:text="@string/tieuDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/size30sp"
        android:layout_marginBottom="53dp"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:layout_above="@+id/mDangKy"
        android:layout_centerHorizontal="true"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_alignParentTop="true" />
    <LinearLayout
    android:id="@+id/mDangKy"
    android:orientation="vertical"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp">
    <EditText
        android:id="@+id/tenDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/tenDangKy"
        android:textSize="@dimen/size16sp"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:padding="@dimen/size16dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="@dimen/size10dp"
        />
    <EditText
        android:id="@+id/matKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size16sp"
        android:background="@color/colorWhite"
        android:hint="@string/matKhau"
        android:padding="@dimen/size16dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/size10dp"
        android:password="true"
        />
    <RadioGroup
        android:id="@+id/rgGioiTinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/btnNam"
            android:text="@string/gioiTinhNam"
            android:textSize="@dimen/size16sp"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/btnNU"
            android:text="@string/gioiTinhNu"
            android:layout_margin="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:textSize="@dimen/size16sp"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <EditText
        android:id="@+id/ngaySinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:hint="@string/ngaySinh"
        android:textSize="@dimen/size16sp"
        android:padding="@dimen/size16dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:drawablePadding="@dimen/size10dp"
        />
    <EditText
        android:id="@+id/soChungMinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:textSize="@dimen/size16sp"
        android:background="@color/colorWhite"
        android:hint="@string/soChungMinh"
        android:padding="@dimen/size16dp"
        android:layout_margin="@dimen/size10dp"
        android:drawableLeft="@drawable/idcard"
        android:drawablePadding="@dimen/size10dp"
        android:maxLength="10"

        />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content"

   >
    <Button
        android:id="@+id/btnDangKy"
        android:textSize="@dimen/size16sp"

        android:text="@string/btnDangKy"
        android:layout_margin="@dimen/size10dp"
        android:layout_width="wrap_content"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:background="@color/colorThoat"
        android:layout_height="wrap_content"
        android:padding="@dimen/size10dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btnThoat"

        android:layout_width="wrap_content"
        android:layout_margin="@dimen/size10dp"
        android:textSize="@dimen/size16sp"
        android:text="@string/btnThoat"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:padding="@dimen/size10dp"
        android:background="@color/colorDangKy"
        android:layout_weight="1"
        android:layout_height="wrap_content" />


</LinearLayout>
</LinearLayout>



</RelativeLayout>
